--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -1,4 +1,4 @@
-<ion-view title=""> 
+<ion-view> 
     <ion-nav-buttons side='right' ng-controller="arCtrl">
         <label class="item-input-wrapper" style="display:none">
         </label>
