--- a/www/partials/error.html
+++ b/www/partials/error.html
@@ -1,4 +1,4 @@
-<ion-view title="" hide-back-button="true">
+<ion-view hide-back-button="true">
     <ion-content>
         <div class="card">
             <h2>No Internet Access</h2>
