--- a/www/partials/favorites.html
+++ b/www/partials/favorites.html
@@ -1,4 +1,4 @@
-<ion-view title="My Favorites">
+<ion-view>
 <ion-nav-buttons side='right' ng-controller="arCtrl">
     <button class="button button-icon button-clear" ng-click="loadAR(favoriteArt, 'Favorite Tour', -1)">
             <img src="img/aricon.png" height="32px"/>
