Change all images

--- a/www/partials/intro.html
+++ b/www/partials/intro.html
@@ -22,7 +22,7 @@
         <ion-slide-box on-slide-changed="slideChanged(index)">
 
           <ion-slide>
-            <h4 class="intro">The main page shows every art piece</h4>
+            <h4 class="intro">The main page shows all of the artwork on UH campus.</h4>
             <img src="img/intro_main.png" alt="Main Page" style="max-width:90%!important">
           </ion-slide>
                  
@@ -40,24 +40,24 @@
             <img src="img/intro_menu.png" alt="Menu Page" style="max-width:95%">  
           </ion-slide>
 
-            <ion-slide>
-                <img src="img/IMG_1836.jpg" alt="Help Page" style="max-height:400px">
-                <div class="intro">
-                  <h4>The help page gives you more information about the app and how to use it.</h4>
-                </div>
+            <ion-slide> 
+              <div class="intro">
+                <h4 class="intro">The help page gives you more information about the app and how to use it.</h4>
+              </div>
+              <img src="img/intro_info.png" alt="Help Page" style="max-height:80%">
             </ion-slide>
           <ion-slide>
-            <img src="img/IMG_1837.jpg" alt="AR Mode Page" style="max-height:400px">
             <div class="intro">
-              <h4>The AR Mode page directs you to the artwork. The Range button allows you to set a range.</h4>
+              <h4 class="intro">The AR Mode page helps to locate the artwork on UH campus.</h4>
             </div>
+            <img src="img/intro_ARmode.png" alt="AR Mode Page" style="max-height:400px">
           </ion-slide>
 
           <ion-slide>
-            <img src="img/IMG_1838.jpg" alt="Map Page" style="max-height:400px">
             <div class="intro">
-              <h4>This page allows you to see the locations of all of the artwork.</h4>
+              <h4 class="intro">This page allows you to see the locations of all of the artwork.</h4>
             </div>
+            <img src="img/IMG_1838.jpg" alt="Map Page" style="max-height:400px">
           </ion-slide>
 
         </ion-slide-box>
