--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -25,6 +25,13 @@ ion-header-bar, .bar-header, .bar-header>h1 {
 	background-color: $dark !important;
 	color:white !important;
 }
+ion-slide>img {
+   position: relative;
+  top: 50%;
+  	-webkit-transform: translateY(-50%);
+  	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
+}
 .intro,.intro>h2,.intro>h3 {
 	font-family: 'Coming Soon';
 }
