--- a/www/partials/intro.html
+++ b/www/partials/intro.html
@@ -1,64 +1,39 @@
- <ion-view view-title="Intro">
-        <ion-nav-buttons side="left">
-          <button class="button button-positive button-clear no-animation"
-                  ng-click="startApp()" ng-show="!slideIndex">
-            Skip Intro
-          </button>
-          <button class="button button-positive button-clear no-animation"
-                  ng-click="previous()" ng-show="slideIndex > 0">
-            Previous Slide
-          </button>
-        </ion-nav-buttons>
-        <ion-nav-buttons side="right"> 
-          <button class="button button-positive button-clear no-animation"
-                  ng-click="next()" ng-show="slideIndex != 4">
-            Next
-          </button>
-          <button class="button button-positive button-clear no-animation"
-                  ng-click="startApp()" ng-show="slideIndex == 4">
-            Start using MyApp
-          </button>
-        </ion-nav-buttons>
-        <ion-slide-box on-slide-changed="slideChanged(index)">
-
-          <ion-slide>
-            <h4 class="intro">The main page shows all of the artwork on UH campus.</h4>
-            <img src="img/intro_main.png" alt="Main Page" style="max-width:90%!important">
-          </ion-slide>
-                 
-          <ion-slide>
-            <div class="intro">
-              <h3>
-                To Access the Menu:
-              </h3>
-              <h4>
-                Swipe to the right<br>
-                or<br>
-                Tap the Menu Button<br>
-              </h4>
-            </div>
-            <img src="img/intro_menu.png" alt="Menu Page" style="max-width:95%">  
-          </ion-slide>
-
-            <ion-slide> 
-              <div class="intro">
-                <h4 class="intro">The help page gives you more information about the app and how to use it.</h4>
-              </div>
-              <img src="img/intro_info.png" alt="Help Page" style="max-height:80%">
-            </ion-slide>
-          <ion-slide>
-            <div class="intro">
-              <h4 class="intro">The AR Mode page helps to locate the artwork on UH campus.</h4>
-            </div>
-            <img src="img/intro_ARmode.png" alt="AR Mode Page" style="max-height:400px">
-          </ion-slide>
-
-          <ion-slide>
-            <div class="intro">
-              <h4 class="intro">This page allows you to see the locations of all of the artwork.</h4>
-            </div>
-            <img src="img/IMG_1838.jpg" alt="Map Page" style="max-height:400px">
-          </ion-slide>
-
-        </ion-slide-box>
-      </ion-view>
+<ion-view view-title="Intro">
+  <ion-nav-buttons side="left">
+    <button class="button button-positive button-clear no-animation"
+            ng-click="startApp()" ng-show="!slideIndex">
+      Skip Intro
+    </button>
+    <button class="button button-positive button-clear no-animation"
+            ng-click="previous()" ng-show="slideIndex > 0">
+      Previous Slide
+    </button>
+  </ion-nav-buttons>
+  <ion-nav-buttons side="right"> 
+    <button class="button button-positive button-clear no-animation"
+            ng-click="next()" ng-show="slideIndex != 4">
+      Next
+    </button>
+    <button class="button button-positive button-clear no-animation"
+            ng-click="startApp()" ng-show="slideIndex == 4">
+      Start using MyApp
+    </button>
+  </ion-nav-buttons>
+  <ion-slide-box on-slide-changed="slideChanged(index)">
+    <ion-slide>
+       <img src="img/intro_main.png" alt="Main Page" style="max-width:99%; max-height:80%">       
+    </ion-slide>
+    <ion-slide>
+       <img src="img/intro_ARmode.png" alt="AR Mode Page" style="max-width:99%; max-height:80%">       
+    </ion-slide>
+    <ion-slide>
+       <img src="img/intro_map.png" alt="Map Page" style="max-width:99%; max-height:80%">      
+    </ion-slide>
+    <ion-slide>  
+       <img src="img/intro_menu.png" alt="Menu Page" style="max-width:99%; max-height:80%">     
+    </ion-slide>
+    <ion-slide> 
+       <img src="img/intro_help.png" alt="Help Page" style="max-width:99%; max-height:80%">      
+    </ion-slide>
+  </ion-slide-box>
+</ion-view>
