--- a/www/partials/intro.html
+++ b/www/partials/intro.html
@@ -16,7 +16,7 @@
     </button>
     <button class="button button-positive button-clear no-animation"
             ng-click="startApp()" ng-show="slideIndex == 4">
-      Start using MyApp
+      Start using Public Art
     </button>
   </ion-nav-buttons>
   <ion-slide-box on-slide-changed="slideChanged(index)">
