tempo fix #36 have to find a way for dynamic css

--- a/www/css/active_style.css
+++ b/www/css/active_style.css
@@ -62,3 +62,9 @@ html, body{
     padding: 5px;
     text-align: center;
 }
+.collageView {
+    padding-top: 108px;
+}
+.description {
+    position: absolute;
+}
