changes made to intro because of change of .png to .jpg

--- a/www/partials/intro.html
+++ b/www/partials/intro.html
@@ -21,19 +21,19 @@
   </ion-nav-buttons>
   <ion-slide-box on-slide-changed="slideChanged(index)">
     <ion-slide>
-       <img src="img/intro_main.png" alt="Main Page" style="max-width:99%; max-height:80%">       
+       <img src="img/intro_main.jpg" alt="Main Page" style="max-width:99%; max-height:80%">       
     </ion-slide>
     <ion-slide>
-       <img src="img/intro_ARmode.png" alt="AR Mode Page" style="max-width:99%; max-height:80%">       
+       <img src="img/intro_ARmode.jpg" alt="AR Mode Page" style="max-width:99%; max-height:80%">       
     </ion-slide>
     <ion-slide>
-       <img src="img/intro_map.png" alt="Map Page" style="max-width:99%; max-height:80%">      
+       <img src="img/intro_map.jpg" alt="Map Page" style="max-width:99%; max-height:80%">      
     </ion-slide>
     <ion-slide>  
-       <img src="img/intro_menu.png" alt="Menu Page" style="max-width:99%; max-height:80%">     
+       <img src="img/intro_menu.jpg" alt="Menu Page" style="max-width:99%; max-height:80%">     
     </ion-slide>
     <ion-slide> 
-       <img src="img/intro_help.png" alt="Help Page" style="max-width:99%; max-height:80%">      
+       <img src="img/intro_help.jpg" alt="Help Page" style="max-width:99%; max-height:80%">      
     </ion-slide>
   </ion-slide-box>
 </ion-view>
