Added two-column artwork detail page.

--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -7,60 +7,53 @@
         </button>
     </ion-nav-buttons>
     <ion-content delegate-handle="detailScroll" style="bottom:79px;">
-        <div class="">
+        <div class="row responsive-sm">
+            <div class="col">
             <img img-cache class="item" ic-src="{{genImList(detailArt)}}" style="max-height:84%;max-width:100%; min-width: 250px; margin:auto; border:none;">
-
-            <div class="item item-text-wrap">
-                <h1 ng-controller="favoriteCtrl">
-                    <span style="margin:auto">{{detailArt.title}}</span>
-                    <button class="button button-icon button-clear" ng-click="toggleFavorite()" style="float: right;">
-<!--                         <img src="img/fav_no.svg" height="40px" ng-show="!isFavorite"/>
-                        <img src="img/fav_yes.svg" height="40px" ng-show="isFavorite"/> -->
-                        <i class="icon ion-heart" ng-class="{'isFavorite':isFavorite}"></i>
-                    </button>
-                </h1>
-                <h2>{{detailArt.artist_name}}</h2>
-                <br/>
-                <p ng-hide="!detailArt.description || detailArt.description==''">{{detailArt.description}}</p>
             </div>
-            <div ng-click="resizeScroll(); artistInfo=!artistInfo;" class="item item-icon-left item-divider" ng-init="artistInfo=true">
-                <i class="icon ion-person"></i>
-                Artist Info
+            <div class="col">
+                <div class="item item-text-wrap">
+                    <h1 ng-controller="favoriteCtrl">
+                        <span style="margin:auto">{{detailArt.title}}</span>
+                        <button class="button button-icon button-clear" ng-click="toggleFavorite()" style="float: right;">
+    <!--                         <img src="img/fav_no.svg" height="40px" ng-show="!isFavorite"/>
+                            <img src="img/fav_yes.svg" height="40px" ng-show="isFavorite"/> -->
+                            <i class="icon ion-heart" ng-class="{'isFavorite':isFavorite}"></i>
+                        </button>
+                    </h1>
+                    <h2>{{detailArt.artist_name}}</h2>
+                    <br/>
+                    <p ng-hide="!detailArt.description || detailArt.description==''">{{detailArt.description}}</p>
+                </div>
+                <div ng-click="resizeScroll(); artistInfo=!artistInfo;" class="item item-icon-left item-divider" ng-init="artistInfo=true">
+                    <i class="icon ion-person"></i>
+                    Artist Info
+                </div>
+                <div class="item item-text-wrap" ng-show="artistInfo">
+                    <p ng-hide="!detailArt.artist_name || detailArt.artist_name==''">Artist: {{detailArt.artist_name}}</p>
+                    <p ng-hide="!detailArt.artist_dob || detailArt.artist_dob==''">Date of Birth: {{detailArt.artist_dob}}</p>
+                    <p ng-hide="!detailArt.artist_pob || detailArt.artist_pob==''">Place of Birth: {{detailArt.artist_pob}}</p>
+                    <p ng-hide="!detailArt.artist_website || detailArt.artist_website==''">Website: <a ng-click="goToLink('{{detailArt.artist_website}}')" style="color:blue;text-decoration: underline;">{{detailArt.artist_website}}</a></p>
+                </div>
+                <div ng-click="resizeScroll(); locationInfo=!locationInfo;" class="item item-icon-left item-divider" ng-init="locationInfo=true">
+                    <i class="icon ion-location"></i>
+                    Location
+                </div>
+                <div class="item item-text-wrap" ng-show="locationInfo">
+                    <p ng-hide="!detailArt.location_name || detailArt.location_name==''">Location: {{detailArt.location_name}}</p>
+                    <p ng-hide="!detailArt.location_campus || detailArt.location_campus==''">Campus: {{detailArt.location_campus}}</p>
+                    <p ng-hide="!detailArt.availability || detailArt.availability==''">Availability: {{detailArt.availability}}</p>
+                </div>
+                <div ng-click="resizeScroll(); charInfo=!charInfo;" class="item item-icon-left item-divider" ng-init="charInfo=true">
+                    <i class="icon ion-clipboard"></i>
+                    Characteristics
+                </div>
+                <div class="item item-text-wrap" ng-show="charInfo">
+                    <p ng-hide="!detailArt.date_made || detailArt.date_made==''">Date Made: {{detailArt.date_made}}</p>
+                    <p ng-hide="!detailArt.medium || detailArt.medium==''">Medium: {{detailArt.medium}}</p>
+                    <p ng-hide="!detailArt.dimensions || detailArt.dimensions==''">Dimensions: {{detailArt.dimensions}}</p>
+                </div>
             </div>
-            <div class="item item-text-wrap" ng-show="artistInfo">
-                <p ng-hide="!detailArt.artist_name || detailArt.artist_name==''">Artist: {{detailArt.artist_name}}</p>
-                <p ng-hide="!detailArt.artist_dob || detailArt.artist_dob==''">Date of Birth: {{detailArt.artist_dob}}</p>
-                <p ng-hide="!detailArt.artist_pob || detailArt.artist_pob==''">Place of Birth: {{detailArt.artist_pob}}</p>
-                <p ng-hide="!detailArt.artist_website || detailArt.artist_website==''">Website: <a ng-click="goToLink('{{detailArt.artist_website}}')" style="color:blue;text-decoration: underline;">{{detailArt.artist_website}}</a></p>
-            </div>
-            <div ng-click="resizeScroll(); locationInfo=!locationInfo;" class="item item-icon-left item-divider" ng-init="locationInfo=true">
-                <i class="icon ion-location"></i>
-                Location
-            </div>
-            <div class="item item-text-wrap" ng-show="locationInfo">
-                <p ng-hide="!detailArt.location_name || detailArt.location_name==''">Location: {{detailArt.location_name}}</p>
-                <p ng-hide="!detailArt.location_campus || detailArt.location_campus==''">Campus: {{detailArt.location_campus}}</p>
-                <p ng-hide="!detailArt.availability || detailArt.availability==''">Availability: {{detailArt.availability}}</p>
-            </div>
-            <div ng-click="resizeScroll(); charInfo=!charInfo;" class="item item-icon-left item-divider" ng-init="charInfo=true">
-                <i class="icon ion-clipboard"></i>
-                Characteristics
-            </div>
-            <div class="item item-text-wrap" ng-show="charInfo">
-                <p ng-hide="!detailArt.date_made || detailArt.date_made==''">Date Made: {{detailArt.date_made}}</p>
-                <p ng-hide="!detailArt.medium || detailArt.medium==''">Medium: {{detailArt.medium}}</p>
-                <p ng-hide="!detailArt.dimensions || detailArt.dimensions==''">Dimensions: {{detailArt.dimensions}}</p>
-            </div>
-<!--
-            <div ng-click="toggleMap()" class="item item-icon-left item-divider">
-                <i ng-hide="!mapShow" class="icon ion-arrow-down-b"></i>
-                <i ng-show="!mapShow" class="icon ion-arrow-right-b"></i>
-                Map
-            </div>
-            <div ng-show="mapShow">
-                <googlemaps class="google-maps" options="map"></googlemaps>
-            </div>
--->
         </div>
     </ion-content>
     <ion-footer-bar align-title="left" class="bar-subfooter" style="height:auto;padding:0px;">
