--- a/www/partials/collageView.html
+++ b/www/partials/collageView.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-nav-buttons side='right' ng-controller="arCtrl">
         <input ng-model="$parent.query" type="search" placeholder="Search">
-        <button class="button button-icon button-clear" ng-click="loadAR(artworkGet(tourID), tourGet(tourID).tour_title, tourID)">
+        <button id="openOn" class="button button-icon button-clear" ng-click="loadAR(artworkGet(tourID), tourGet(tourID).tour_title, tourID)">
             <img src="img/aricon.png" height="32px"/>
         </button>
     </ion-nav-buttons>
