--- a/www/partials/arModal.html
+++ b/www/partials/arModal.html
@@ -6,14 +6,8 @@
         <h1 class="title">Download</h1>
     </ion-header-bar>
     <ion-content scroll="false">
-<!--
-        <button onclick="location.href='https://play.google.com/store/apps/details?id=com.wikitude'" class="button"  style="width:100%; height:50%" href="google.com">For Android</button>
-        <button onclick="location.href='https://itunes.apple.com/us/app/wikitude/id329731243?mt=8'"class="button"  style="width:100%; height:50%">For iOS</button>
--->
-        <img style="position:absolute;
-    left:50%;
-    top:50%;
-    margin-top:-25px;
+        AR is not supported on this device. Do you wish to download the plugin?
+        <img style="position:absolute;left:50%;top:50%;margin-top:-25px;
     margin-left:45px;" alt="googleplay_badge" align="center"src="http://www.wikitude.com/wp-content/uploads/2014/04/googleplay_badge.png">
         <img style="position:absolute;left:50%;top:50%;margin-top:-25px;margin-left:-300px;" alt="appstore_badge" src="http://www.wikitude.com/wp-content/uploads/2014/04/appstore_badge.png">
     </ion-content>
