--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -2,8 +2,8 @@
 <ion-content>
     <div class="card">
         <h2>The App</h2>
-        <p>The tour app is intended to enhance the experience of students, alumni, and those interested in the University of Houston's public art collection by supplying relevent information on the artwork, as well as pathfinding tools to help in locating each piece.</p>
-        <p>The tour app was created by Data Analytics in Student Hands (DASH), an Honors College organization with contributions by Suneil Tandon, Carl Stephen, Timothy Brown, Dan Vo, and Isme Correa.</p>
+        <p>The ARTour app is intended to enhance the experience of students, alumni, and those interested in the University of Houston's public art collection by supplying relevent information on the artwork, as well as pathfinding tools to help locate each piece.</p>
+        <p>The tour app was created by Data Analytics in Student Hands (DASH), an Honors College organization with contributions by Suneil Tandon, Carl Stephen, Timothy Brown, Vu Nguyen, Hejal Soni, Dan Vo, and Isme Correa.</p>
     </div>
     <div class="card">
         <h2>The Collection</h2>
@@ -21,9 +21,8 @@
     <div class="card">
         <h2>Contact Info</h2>
         <p>For further information you can contact Michael Guidry, Curator of the University Art Collection at
-        <address>
             <br>mguidry3@uh.edu or <br>713-743-5315.</p>
-        </address>
+        <br> 
         <img src="img/uhart.jpg">
     </div>
 </ion-content>
