Finalized credits page.

--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -3,7 +3,7 @@
     <div class="card">
         <h2>The App</h2>
         <p>The ARTour app is intended to enhance the experience of students, alumni, and those interested in the University of Houston's public art collection by supplying relevent information on the artwork, as well as pathfinding tools to help locate each piece.</p>
-        <p>The app was created by Data Analytics in Student Hands (DASH), an Honors College organization with contributions by Suneil Tandon, Carl Stephen, Timothy Brown, Vu Nguyen, Hejal Soni, Dan Vo, and Isme Correa.</p>
+        <p>The app was created by Data Analytics in Student Hands (DASH), an Honors College organization with contributions by Suneil Tandon, Carl Stephen, Timothy Brown, Vu Nguyen, Hejal Soni, Binh Tran, Dan Vo, and Isme Correa.</p>
         <img src="img/DASH-rec.jpg" height="85px">
     </div>
     <div class="card">
