Added disclaimer about AR Mode

--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -6,6 +6,13 @@
         <p>The app was created by Data Analytics in Student Hands (DASH), an Honors College organization with contributions by Suneil Tandon, Carl Stephen, Timothy Brown, Vu Nguyen, Hejal Soni, Binh Tran, Dan Vo, and Isme Correa.</p>
         <img src="img/DASH-rec.jpg" height="85px">
     </div>
+
+    <div class="card">
+        <h2>Using AR Mode</h2>
+        <p> The WiFi only models of tablets run off the location services through the WiFi. This means that AR Mode will work as long as there is a strong enough WiFi signal. If the device does not have cellular data, the location services may not work or may be inaccurate. </p>
+    </div>
+
+    
     <div class="card">
         <h2>The Collection</h2>
         <p>In 1969, the Texas legislature voted to enact 1% for art for University of Houston. UH was the first state institution to establish a percent for art program and currently has one of the largest and most impressive university art collections in the country. Today, the collection numbers over 500 artworks located throughout the UH System campuses.</p>
