--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -22,7 +22,7 @@
         <h2>External Resources</h2>
         <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a ng-click="goToLink('http://uh.edu/uh-collection')" style="color:blue;text-decoration: underline;">here</a>. We are also on Facebook <a ng-click="goToLink('https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070')" style="color:blue;text-decoration: underline;">here</a>.
 			<p>
-				If you’d like to see more art on campus, visit <a ng-click="goToLink('http://www.blafferartmuseum.org/')" style="color:blue;text-decoration: underline;">Blaffer Art Museum</a>. To learn more and schedule a free tour for groups of 10 or more, visit <a ng-click="goToLink('http://blafferartmuseum.org.s158155.gridserver.com/guided-tours/')" style="color:blue;text-decoration: underline;">here</a>.
+            To schedule a free guided tour of the UHPAC for groups of 10 or more, contact <a ng-click="goToLink('http://blafferartmuseum.org.s158155.gridserver.com/guided-tours/')" style="color:blue;text-decoration: underline;">Blaffer Art Museum</a>. Visit <a ng-click="goToLink('http://www.blafferartmuseum.org/')" style="color:blue;text-decoration: underline;">here</a> for more information about museum exhibitions and programs.
 			</p>
         </p>
     </div>
@@ -30,7 +30,11 @@
         <h2>Contact Info</h2>
         <p>For further information you can contact Michael Guidry, Curator of the University Art Collection at
             <br>mguidry3@uh.edu or <br>713-743-5315.</p>
-        <br> 
+        <br>
+        <img src="img/blaffer.jpg">
+        <br>
+        <br>
+        <br>
         <img src="img/uhart.jpg">
     </div>
 </ion-content>
