--- a/www/partials/menu.html
+++ b/www/partials/menu.html
@@ -10,6 +10,15 @@
         <a ui-sref="tour.collage({tourID:{{tour.tour_id}}})" ng-repeat="tour in toursGet()" class="item" menu-close nav-clear ng-class="{active:isActive('/tour/collage/{{tour.tour_id}}')}">
             <h3>{{tour.tour_title}}</h3>
         </a>
+        <div class="item item-divider">
+            More
+        </div>
+        <a class="item" ui-sref="tour.about" menu-close nav-clear>
+                About
+        </a>
+        <a class="item" ui-sref="tour.intro" menu-close nav-clear>
+                Intro
+        </a>
     </div>
 </ion-content>
 </ion-view>
