--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -11,7 +11,6 @@
         <h2>Using AR Mode</h2>
         <p> The WiFi only models of tablets run off the location services through the WiFi. This means that AR Mode will work as long as there is a strong enough WiFi signal. If the device does not have cellular data, the location services may not work or may be inaccurate. </p>
     </div>
-
     
     <div class="card">
         <h2>The Collection</h2>
@@ -20,9 +19,9 @@
     </div>
     <div class="card">
         <h2>External Resources</h2>
-        <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a ng-click="goToLink('http://uh.edu/uh-collection')" style="color:blue;text-decoration: underline;">here</a>. We are also on Facebook <a ng-click="goToLink('https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070')" style="color:blue;text-decoration: underline;">here</a>.
+        <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a href="#" onclick="window.open('http://uh.edu/uh-collection', '_blank', 'location=yes'); return false;">here</a>. We are also on Facebook <a href="#" onclick="window.open('https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070', '_blank', 'location=yes'); return false;">here</a>
 			<p>
-            To schedule a free guided tour of the UHPAC for groups of 10 or more, contact <a ng-click="goToLink('http://blafferartmuseum.org.s158155.gridserver.com/guided-tours/')" style="color:blue;text-decoration: underline;">Blaffer Art Museum</a>. Visit <a ng-click="goToLink('http://www.blafferartmuseum.org/')" style="color:blue;text-decoration: underline;">here</a> for more information about museum exhibitions and programs.
+            To schedule a free guided tour of the UHPAC for groups of 10 or more, contact <a href="#" onclick="window.open('http://blafferartmuseum.org.s158155.gridserver.com/guided-tours/', '_blank', 'location=yes'); return false;">Blaffer Art Museum</a>. Visit <a href="#" onclick="window.open('http://www.blafferartmuseum.org/', '_blank', 'location=yes'); return false;">here</a> for more information about museum exhibitions and programs.
 			</p>
         </p>
     </div>
