--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -19,9 +19,9 @@
     </div>
     <div class="card">
         <h2>External Resources</h2>
-        <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a href="#" onclick="window.open('http://uh.edu/uh-collection', '_blank', 'location=yes'); return false;">here</a>. We are also on Facebook <a href="#" onclick="window.open('https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070', '_blank', 'location=yes'); return false;">here</a>
+        <p>A new web site has been developed that will continue to expand with the ever growing collection.  A map and walking tour of the central campus is available online <a href="#" ng-click="goToLink('http://uh.edu/uh-collection')">here</a>. We are also on Facebook <a href="#" onclick="window.open('https://www.facebook.com/pages/University-of-Houston-Public-Art-Collection/174240729070', '_blank', 'location=yes'); return false;">here</a>
 			<p>
-            To schedule a free guided tour of the UHPAC for groups of 10 or more, contact <a href="#" onclick="window.open('http://blafferartmuseum.org.s158155.gridserver.com/guided-tours/', '_blank', 'location=yes'); return false;">Blaffer Art Museum</a>. Visit <a href="#" onclick="window.open('http://www.blafferartmuseum.org/', '_blank', 'location=yes'); return false;">here</a> for more information about museum exhibitions and programs.
+            To schedule a free guided tour of the UHPAC for groups of 10 or more, contact <a href="#" ng-click="goToLink('http://blafferartmuseum.org.s158155.gridserver.com/guided-tours/')">Blaffer Art Museum</a>. Visit <a href="#" ng-click="goToLink('http://www.blafferartmuseum.org/')">here</a> for more information about museum exhibitions and programs.
 			</p>
         </p>
     </div>
