--- a/www/partials/artworkDetail.html
+++ b/www/partials/artworkDetail.html
@@ -2,10 +2,9 @@
     <ion-nav-buttons side='right' ng-controller="arCtrl">
         <label class="item-input-wrapper" style="display:none">
         </label>
-        <!-- taking AR button and putting it in index.html -->
-        <!-- <button class="button button-icon button-clear" ng-show="ARModeActive" ng-click="returnToAR()">
+        <button class="button button-icon button-clear" ng-show="ARModeActive" ng-click="returnToAR()">
             <img src="img/aricon.png" height="32px"/>
-        </button> -->
+        </button>
     </ion-nav-buttons>
     <ion-content delegate-handle="detailScroll" style="bottom:79px;">
         <div class="row responsive-sm">
